# RFID

./: CMakeLists.txt  LICENSE  README.md  main.cpp  modbus.cpp
doc/: （新）CPH-302模块规格书2021(21.12.16)(1).docx
enc_temp_folder/35c5a174204952749a85caf0fb1f7cb9/: rfid.h
enc_temp_folder/7ebbe59531451ed4afcb6e79bb9ba743/: rfid.cpp
include/: rfid.h  serialCom_v2.h
serialCom/: rfid.cpp  rfid.h  serialCom_v2.cpp  serialCom_v2.h
